[package]
name = "sshs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15"
dialoguer = "0.10"
clap = "4.3.23"
home = "0.5.5"
